...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listing_list_image"
        app:layout_constraintTop_toBottomOf="@+id/listing_list_title" />

    <TextView
        android:id="@+id/listing_list_price"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="$00.00"
...
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="@+id/listing_list_image"
        app:layout_constraintEnd_toStartOf="@+id/listing_list_time_left"
        app:layout_constraintStart_toEndOf="@+id/listing_list_bid_count" />

    <TextView
        android:id="@+id/listing_list_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
...
