...
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view_listing_bid_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_listing_bid_input" />

    <Button
        android:id="@+id/view_listing_edit_button"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hapticFeedbackEnabled="true"
        android:text="Edit Listing"
...
