<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.activities.FilterListingsActivity"
    tools:showIn="@layout/activity_filter_listings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="498dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="Search for Listings by Filter(s):"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="180dp"
        android:text="Name:"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        android:text="Location:"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="452dp"
        android:text="Status:"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/locations_spinner"
        android:layout_width="377dp"
        android:layout_height="45dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="364dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="377dp"
        android:layout_height="45dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="268dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/status_spinner"
        android:layout_width="377dp"
        android:layout_height="41dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="452dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:text="Category:"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtFilterName"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/txt_field_black_border"
        android:ems="10"
        android:hint="Trek Yoshimoto Nara"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="162dp"
        android:layout_height="72dp"
        android:layout_marginStart="352dp"
        android:layout_marginTop="660dp"
        android:background="#1A5276"
        android:text="Search"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="162dp"
        android:layout_height="72dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="660dp"
        android:background="#1A5276"
        android:text="Cancel / Show All"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="584dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="342dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="584dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="525dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="584dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="431dp" />

</android.support.constraint.ConstraintLayout>