<resources>
    <string name="app_name">CopShop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_listing">Create Listing</string>
    <string name="title_activity_listing_list">Listings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_filter_listings">FilterListingsActivity</string>
</resources>
...
